# LLM-TT

./: .gitignore  LICENSE  README.md  fc_test.py  main.py  mkdocs.yml  pyproject.toml  rope_test.py  tokenizer.py
bilibili/: function_calling.ipynb  qwen_rope.ipynb  rope.ipynb  typing.ipynb
docs/: agent.md  mymanus.md  tool.md
docs/source/: conf.py  index.rst  mymanus.logger.rst  mymanus.prompt.rst  mymanus.rst
manus/: agent.py  fc_test.py  tool_manager.py
manus/OpenManus-TT/: run_flow.py  test_pydantic.py
mcp/: client.py  server.py  test.py
ref_code/OpenManus-TT/: test_pydantic.py
ref_code/OpenManus-TT/app/agent/: mcp.py  toolcall.py
ref_code/OpenManus-TT/app/flow/: base.py  planning.py
ref_code/OpenManus-TT/app/mcp/: server.py
ref_code/OpenManus-TT/app/tool/: mcp.py
site/: 404.html  index.html  objects.inv
site/agent/: index.html
site/mymanus/: index.html
site/search/: search_index.json
site/tool/: index.html
src/manus/: __init__.py
src/manus/agent/: __init__.py  agent.py  llm.py  memory_manager.py  tool_manager.py
src/mcp/: client.py  test.py
src/mymanus/: __init__.py
src/mymanus/agent/: __init__.py  agent.py  base_agent.py  llm.py  memory_manager.py  tool_manager.py
src/mymanus/api/: main.py  memory_api.py  tool_api.py
src/mymanus/prompt/: __init__.py  system_prmopt.py
src/mymanus/tool/: __init__.py  math.py  search.py  terminate.py
src/mymcp/: client.py  mcp_adapter.py  server.py  test.py
src/mymcp/tool/: general.py  math.py
