[project]
name = "llm-tt"
version = "0.1.0"
description = "LLM learning project for Tong Tong"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baidusearch>=1.0.3",
    "loguru>=0.7.3",
    "mcp[cli]>=1.7.1",
    "openai>=1.76.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
